# sgmanager

./: .gitignore  Dockerfile  LICENSE  LICENSE.TXT  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sgmanager.spec  sgmanager.spec.in  test.py
conf/: groups.yaml
examples/: groups.deprecated.expanded.yaml  groups.deprecated.yaml  groups.expanded.yaml  groups.yaml  monitoring-networks.yaml  ssh.yaml
examples/deprecated/: default.yaml  monitoring.yaml
gdc/: __init__.py
gdc/logger/: __init__.py
gdc/sgmanager/: __init__.py  __main__.py  cli.py  decorators.py  exceptions.py
gdc/sgmanager/securitygroups/: __init__.py  sgroup.py  srule.py
sgmanager/: __init__.py  __main__.py  cli.py  decorators.py  exceptions.py  group.py  manager.py  rule.py  utils.py  yaml.py
sgmanager/logger/: __init__.py  level_handler.py
sgmanager/securitygroups/: __init__.py  sgroup.py  srule.py
tests/: test_simple.py
